auto-download JDK, switch to jlink instead of beryx to build JRE, bugfix imGui version variable